# ckgrep

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/release-notes/: v1.1.1.md
.github/workflows/: build.yml  release.yml
docs/: usage.md
examples/: TOT_HT_LT_SOOT_NOX.CKI
examples/C3-V4.0.1-FULL/CHEMKIN/: C3MechV4.0.1.THERM  C3MechV4.0.1.TRAN
source/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp  matcher.cpp  matcher.hpp  pattern.cpp  pattern.hpp  query.cpp  query.hpp  reaction_parser.cpp  reaction_parser.hpp  reaction_scanner.cpp  reaction_scanner.hpp  species_scanner.cpp  species_scanner.hpp  string_utils.hpp  utils.cpp  utils.hpp
tests/: test_matcher.cpp  test_pattern.cpp  test_query.cpp  test_reaction_parser.cpp  test_reaction_scanner.cpp  test_string_utils.cpp
